--- a/css/add_task.css
+++ b/css/add_task.css
@@ -575,3 +575,10 @@
         flex-direction: column;
     }
 }
+
+@media (max-width: 600px) {
+    #addTaskContainer .task-input-container{
+        margin-left: 16px;
+        margin-right: 16px;
+    }
+}
