--- a/css/board.css
+++ b/css/board.css
@@ -110,7 +110,8 @@
     justify-content: space-between;
     /* height: calc(100vh - 327px); */
     gap: 24px;
-    height: 100%;
+    min-height: 100px;
+    height: auto;
     padding-bottom: 16px;
     overflow: scroll;
     padding: 18px 64px 0 0px;
@@ -118,7 +119,8 @@
 
 .board-section .creat-task-area {
     width: 244px;
-    min-height: 200px;
+    /* min-height: 100px;
+    height: auto; */
     display: flex;
     flex-direction: column;
     flex: 1 0 0;
@@ -144,7 +146,6 @@
 
 .board-section .card-category {
     padding: 4px 16px;
-    background-color: #0038FF;
     font-size: 16px;
     color: #FFFFFF;
     border-radius: 8px;
@@ -238,6 +239,7 @@
 .board-section .drag-area-highlight {
     border: 2px gray dashed;
     background-color: rgba(0, 0, 0, 0.1);
+    padding-bottom: 200px;
 }
 
 .board-section .noToDo {
@@ -271,6 +273,7 @@
 
 .board-section .task-card-overlay {
     width: 525px;
+    height: 80%;
     background-color: #FFFFFF;
     border-radius: 30px;
     display: flex;
@@ -278,6 +281,7 @@
     gap: 24px;
     align-items: flex-start;
     padding: 48px 40px;
+    overflow: scroll;
 }
 
 .board-section .card-category-top-section {
@@ -419,12 +423,12 @@
 
 
 .category-technical {
-    background-color: blue;
+    background-color: #0038FF;
     color: white;
 }
 
 .category-contact-story {
-    background-color: green;
+    background-color: #1FD7C1;
     color: black;
 }
 
@@ -494,7 +498,7 @@
     justify-content: flex-start;
     align-items: start;
     max-width: 90%;
-    height: 605px;
+    height: 80%;
     
     width: 525px;
     background-color: #FFFFFF;
