--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ h3 {
     cursor: pointer;
     width: fit-content;
     border: unset;
+    transition: all 0.1s ease-in-out;
 }
 
 .default-button:hover {
@@ -81,6 +82,7 @@ h3 {
     text-align: left;
     cursor: pointer;
     background-color: white;
+    transition: all 0.1s ease-in-out;
 }
 
 .alternative-button:hover {
