--- a/css/board.css
+++ b/css/board.css
@@ -535,13 +535,14 @@
 
     .board-section .task-section-responsive {
         display: flex;
-        padding-bottom: 16px;
+        padding: 6px 0 6px 0;
         font-size: 27px;
     }
 
     .board-section .task-card {
        min-width: 220px;
         box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.08);
+        min-height: 222px;
     }
 
     .board-section .task-card:hover {
@@ -553,7 +554,7 @@
         overflow-x: scroll;
         /* padding-right: 30px; */
         /* padding-bottom: 26px; */
-        padding: 13px 0;
+        padding: 13px 0 30px 0;
         border-radius: 0;
         min-width: 150px;
     }
