--- a/css/board.css
+++ b/css/board.css
@@ -7,7 +7,6 @@
     margin: 96px 64px 0 314px;
     font-family: 'Inter', sans-serif;
     overflow: hidden;
-    /* overflow: scroll; */
     overflow-y: scroll;
 }
 
@@ -16,7 +15,6 @@
     align-items: center;
     justify-content: space-between;
     max-width: 1300px;
-    /* min-width: 721px; */
     margin: 80px 30px 0 15px;
 }
 
@@ -28,7 +26,6 @@
     position: relative;
     display: flex;
     align-items: center;
-    /* width: 312px; */
 }
 
 .board-section .input-section input {
@@ -80,16 +77,7 @@
     line-height: 24px;
     color: black;
     width: 100%;
-
-    /* margin-right: 50px; */
-
-    /* padding-right: 94px; */
 }
-
-/* .board-section .input-line-responsive {
-    position: absolute;
-    right: 60px;
-} */
 
 .board-section .head-section-right {
     display: flex;
@@ -149,7 +137,6 @@
 .task-section-responsive {
     display: none;
     justify-content: space-between;
-    /* flex: 1; */
     align-items: center;
     min-width: 190px;
     font-size: 20px;
@@ -159,7 +146,6 @@
 
 .board-section .task-field {
     overflow: hidden;
-    /* position: relative; */
 }
 
 .board-section .sroll-area {
@@ -280,8 +266,6 @@
     align-items: center;
     color: #FFFFFF;
     font-size: 12px;
-
-
 }
 
 .board-section .drag-area-highlight {
@@ -523,7 +507,6 @@
 
     .board-section .task-area {
         display: block;
-        /* margin: 96px 16px 0 260px; */
         box-sizing: border-box;
         padding: 15px 0px 50px 0px;
     }
@@ -552,8 +535,6 @@
     .board-section .creat-task-area {
         flex-direction: row;
         overflow-x: scroll;
-        /* padding-right: 30px; */
-        /* padding-bottom: 26px; */
         padding: 13px 0 30px 0;
         border-radius: 0;
         min-width: 150px;
@@ -562,10 +543,6 @@
     h1 {
         font-size: 47px;
     }
-
-    /* .board-section .input-section-repsonsive {
-        display: flex;
-    } */
 
     .board-section .noToDo {
         width: 100%;
@@ -579,8 +556,12 @@
     .board-section .head-section {
         margin: 80px 0px 0 0px;
     }
-}
 
+    .board-section .task-card-bottom-section:last-child {
+        margin-top: auto;
+        min-height: 28px;
+    }
+}
 
 @media(max-width: 1050px) {
     .board-section .addTask-responive-img {
@@ -596,9 +577,6 @@
         display: flex;
     }
 }
-
-
-
 
 @media(max-width: 800px) {
     .board-section {
