updated header responsive menu ovrelay

--- a/css/header-responsive.css
+++ b/css/header-responsive.css
@@ -53,8 +53,19 @@
     background-color: #2A3647;
 }
 
+#overlay-responsive {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+}
+
 @media(max-width: 800px) {
-    .header {
+    .headerTemplate {
         display: none;
     }
 }
