--- a/css/header.css
+++ b/css/header.css
@@ -27,7 +27,6 @@
 
 .header-menu {
     width: 150px;
-    height: 158px;
     position: absolute;
     top: 96px;
     right: 0;
@@ -97,6 +96,12 @@
     width: 100%;
     height: 100%;
     z-index: 1;
+}
+
+@media(max-width:800px) {
+    .header {
+        display: none;
+    }
 }
 
 
