--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ h3 {
     justify-content: center;
     align-items: center;
     aspect-ratio: 1 / 1;
+    border: 1px solid white;
 }
 
 .circle-text {
