--- a/css/board.css
+++ b/css/board.css
@@ -256,13 +256,14 @@
 }
 
 .board-section .plus-icon-contacts {
-    width: 32px;
-    height: 32px;
+    width: 25px;
+    height: 25px;
     margin-left: -15px;
 }
 
 .board-section .task-card-users {
     display: flex;
+    align-items: center;
     gap: 5px;
 }
 
