--- a/css/add_task.css
+++ b/css/add_task.css
@@ -18,10 +18,15 @@
 }
 
 #addTaskContainer .add-task {
-    width: calc(100%);
+    /* width: calc(100%); */
     display: flex;
     justify-content: center;
     flex-direction: column;
+    /* position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0; */
 }
 
 #addTaskContainer h1 {
