--- a/style.css
+++ b/style.css
@@ -30,13 +30,13 @@ h3 {
 
 .circle {
     width: 42px;
-    min-width: 42px;
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
     aspect-ratio: 1 / 1;
-    border: 1px solid white;
+    border: 2px solid white;
+    box-sizing: border-box;
 }
 
 .circle-text {
@@ -46,7 +46,8 @@ h3 {
 
 .default-button {
     font-size: 21px;
-    padding: 15px 24px 15px 24px;
+    padding: 12px 24px 12px 24px;
+    margin: 22px 0;
     border-radius: 8px;
     background: #2A3647;
     color: white;
@@ -56,7 +57,7 @@ h3 {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 10px;
+    gap: 16px;
     cursor: pointer;
     width: fit-content;
     border: unset;
