--- a/css/add_task.css
+++ b/css/add_task.css
@@ -501,6 +501,7 @@
     justify-content: center;
     align-items: center;
     gap: 20px;
+    font-family: 'Inter', sans-serif; 
 }
 
 @keyframes alignAnimation {
