--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f6f7f8;
-    font-family: inter;    
+    font-family: 'Inter', sans-serif;
 }
 
 h1 {
