--- a/css/board.css
+++ b/css/board.css
@@ -722,6 +722,12 @@
 }
 
 
+@media(max-width: 1250px) {
+    #addTaskCard {
+        max-width: 96%;
+    }
+}
+
 
 @keyframes rightToCenter {
     from {
