--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ h3 {
 
 .alternative-button {
     padding: 15px 24px 15px 24px;
+    margin: 22px 0;
     border-radius: 8px;
     border: 1px solid #2A3647;
     font-size: 21px;
